Fix NaN issues in Kaggle notebook
Changes:
- Add explicit self-loops to prevent isolated node issues
- Disable auto self-loops in GCNConv (manual control)
- Add NaN checks at each step with warnings
- Add proper model reset_parameters
- Copy best_state dict to avoid reference issues
- Handle case when no valid training occurs

This should resolve the NaN errors on GPU.

--- a/notebooks/03_gcn_baseline_kaggle.ipynb
+++ b/notebooks/03_gcn_baseline_kaggle.ipynb
@@ -196,8 +196,17 @@
     "edge_dst = valid_edges['txId2'].map(tx_id_to_idx).values\n",
     "edge_index = torch.LongTensor(np.vstack([edge_src, edge_dst]))\n",
     "\n",
+    "# Check for isolated nodes and add self-loops\n",
+    "num_nodes = len(data_df)\n",
+    "self_loop_src = np.arange(num_nodes)\n",
+    "self_loop_dst = np.arange(num_nodes)\n",
+    "edge_index = torch.cat([\n",
+    "    edge_index,\n",
+    "    torch.LongTensor(np.vstack([self_loop_src, self_loop_dst]))\n",
+    "], dim=1)\n",
+    "\n",
     "print(f\"✓ Edge index shape: {edge_index.shape}\")\n",
-    "print(f\"✓ Total edges: {edge_index.shape[1]:,}\")"
+    "print(f\"✓ Total edges (with self-loops): {edge_index.shape[1]:,}\")"
    ]
   },
   {
@@ -262,15 +271,22 @@
     "        self.dropout = dropout\n",
     "        \n",
     "        self.convs = nn.ModuleList()\n",
-    "        self.convs.append(GCNConv(in_channels, hidden_channels))\n",
+    "        self.convs.append(GCNConv(in_channels, hidden_channels, add_self_loops=False, normalize=True))\n",
     "        \n",
     "        for _ in range(num_layers - 2):\n",
-    "            self.convs.append(GCNConv(hidden_channels, hidden_channels))\n",
+    "            self.convs.append(GCNConv(hidden_channels, hidden_channels, add_self_loops=False, normalize=True))\n",
     "        \n",
     "        if num_layers > 1:\n",
-    "            self.convs.append(GCNConv(hidden_channels, out_channels))\n",
+    "            self.convs.append(GCNConv(hidden_channels, out_channels, add_self_loops=False, normalize=True))\n",
     "        else:\n",
-    "            self.convs[0] = GCNConv(in_channels, out_channels)\n",
+    "            self.convs[0] = GCNConv(in_channels, out_channels, add_self_loops=False, normalize=True)\n",
+    "        \n",
+    "        self.reset_parameters()\n",
+    "    \n",
+    "    def reset_parameters(self):\n",
+    "        \"\"\"Initialize weights with Xavier initialization.\"\"\"\n",
+    "        for conv in self.convs:\n",
+    "            conv.reset_parameters()\n",
     "    \n",
     "    def forward(self, x, edge_index):\n",
     "        for conv in self.convs[:-1]:\n",
@@ -327,6 +343,12 @@
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
     "    out = model(x, edge_index)\n",
+    "    \n",
+    "    # Check for NaN in forward pass\n",
+    "    if torch.isnan(out).any():\n",
+    "        print(f\"WARNING: NaN detected in forward pass at epoch {epoch+1}, skipping...\")\n",
+    "        continue\n",
+    "    \n",
     "    loss = criterion(out[train_mask], y[train_mask])\n",
     "    loss.backward()\n",
     "    torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
@@ -336,9 +358,21 @@
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        out = model(x, edge_index)\n",
+    "        \n",
+    "        # Check for NaN\n",
+    "        if torch.isnan(out).any():\n",
+    "            print(f\"WARNING: NaN in predictions at epoch {epoch+1}, skipping...\")\n",
+    "            continue\n",
+    "        \n",
     "        val_loss = criterion(out[val_mask], y[val_mask]).item()\n",
     "        val_probs = F.softmax(out[val_mask], dim=1)[:, 1].cpu().numpy()\n",
     "        val_labels = y[val_mask].cpu().numpy()\n",
+    "        \n",
+    "        # Check for NaN in probabilities\n",
+    "        if np.isnan(val_probs).any():\n",
+    "            print(f\"WARNING: NaN in probabilities at epoch {epoch+1}, skipping...\")\n",
+    "            continue\n",
+    "        \n",
     "        val_pr_auc = average_precision_score(val_labels, val_probs)\n",
     "    \n",
     "    history['train_loss'].append(loss.item())\n",
@@ -353,7 +387,7 @@
     "        best_val_pr_auc = val_pr_auc\n",
     "        best_epoch = epoch\n",
     "        patience_counter = 0\n",
-    "        best_state = model.state_dict()\n",
+    "        best_state = model.state_dict().copy()\n",
     "    else:\n",
     "        patience_counter += 1\n",
     "    \n",
@@ -363,8 +397,12 @@
     "        break\n",
     "\n",
     "# Load best model\n",
-    "model.load_state_dict(best_state)\n",
-    "print(\"\\n✓ Training complete!\")"
+    "if best_val_pr_auc > 0:\n",
+    "    model.load_state_dict(best_state)\n",
+    "    print(\"\\n✓ Training complete!\")\n",
+    "    print(f\"✓ Loaded best model from epoch {best_epoch+1}\")\n",
+    "else:\n",
+    "    print(\"\\nWARNING: No valid training occurred. Using last model state.\")"
    ]
   },
   {
