Kaggle notebook: sanitize features to avoid NaNs (inf/NaN handling, robust normalization, nan_to_num)

--- a/notebooks/03_gcn_baseline_kaggle.ipynb
+++ b/notebooks/03_gcn_baseline_kaggle.ipynb
@@ -150,12 +150,20 @@
     "print(f\"Legitimate (class=2): {(data_df['class'] == 2).sum():,}\")\n",
     "print(f\"Unlabeled (class=3): {(data_df['class'] == 3).sum():,}\")\n",
     "\n",
-    "# Extract features\n",
+    "# Extract and sanitize features\n",
     "feature_cols = [col for col in data_df.columns if col not in ['txId', 'Time step', 'class']]\n",
-    "x = torch.FloatTensor(data_df[feature_cols].values)\n",
+    "feat_df = data_df[feature_cols].replace([np.inf, -np.inf], np.nan).fillna(0.0)\n",
+    "x_np = feat_df.astype(np.float32).values\n",
     "\n",
-    "# Normalize features\n",
-    "x = (x - x.mean(dim=0)) / (x.std(dim=0) + 1e-8)\n",
+    "# Normalize features (robust)\n",
+    "mean = x_np.mean(axis=0)\n",
+    "std = x_np.std(axis=0)\n",
+    "std[std < 1e-6] = 1.0\n",
+    "x_np = (x_np - mean) / std\n",
+    "\n",
+    "# Convert to tensor and ensure finite\n",
+    "x = torch.from_numpy(x_np).float()\n",
+    "x = torch.nan_to_num(x, nan=0.0, posinf=0.0, neginf=0.0)\n",
     "\n",
     "# Extract timestamps\n",
     "timestamps = data_df['Time step'].values\n",
@@ -166,7 +174,8 @@
     "y = torch.LongTensor(y)\n",
     "\n",
     "print(f\"\\n✓ Features shape: {x.shape}\")\n",
-    "print(f\"✓ Labels shape: {y.shape}\")"
+    "print(f\"✓ Labels shape: {y.shape}\")\n",
+    "print(f\"✓ Any NaN in features: {torch.isnan(x).any().item()}\")"
    ]
   },
   {
