fix(tabular-kaggle): unify timestamp to 'timestamp' and sort accordingly (root cause fix)

--- a/notebooks/05_tabular_baselines_kaggle.ipynb
+++ b/notebooks/05_tabular_baselines_kaggle.ipynb
@@ -81,6 +81,16 @@
     "df = features_df.merge(classes_df, on='txId')\n",
     "print(f\"Merged shape: {df.shape}\")\n",
     "\n",
+    "# Normalize timestamp column to 'timestamp'\n",
+    "ts_candidates = ['Time step','time_step','timestamp','time','timestep']\n",
+    "for c in ts_candidates:\n",
+    "    if c in df.columns:\n",
+    "        if c != 'timestamp':\n",
+    "            df = df.rename(columns={c: 'timestamp'})\n",
+    "        break\n",
+    "else:\n",
+    "    raise KeyError(f\"No timestamp column found in merged DataFrame; columns: {list(df.columns)[:25]}\")\n",
+    "\n",
     "# Filter labeled only\n",
     "df_labeled = df[df['class'].isin(['1', '2'])].copy()\n",
     "df_labeled['label'] = (df_labeled['class'] == '2').astype(int)  # 2=fraud, 1=legit\n",
@@ -103,7 +113,7 @@
    "outputs": [],
    "source": [
     "# Sort by timestamp\n",
-    "df_labeled = df_labeled.sort_values('time_step')\n",
+    "df_labeled = df_labeled.sort_values('timestamp')\n",
     "\n",
     "# Split: 60% train, 20% val, 20% test (temporal)\n",
     "n = len(df_labeled)\n",
