M5 Complete: Tabular baselines dominate GNNs (XGBoost 0.99 vs GraphSAGE 0.45 PR-AUC)

--- a/notebooks/05_tabular_baselines_kaggle.ipynb
+++ b/notebooks/05_tabular_baselines_kaggle.ipynb
@@ -67,9 +67,36 @@
    "outputs": [],
    "source": [
     "# Load Elliptic++ dataset\n",
-    "data_dir = Path('/kaggle/input/elliptic2')\n",
+    "# Expected Kaggle dataset structure:\n",
+    "# /kaggle/input/elliptic-fraud-detection/\n",
+    "#   - elliptic_txs_features.csv\n",
+    "#   - elliptic_txs_classes.csv\n",
     "\n",
-    "print(\"Loading Elliptic++ dataset...\")\n",
+    "import os\n",
+    "kaggle_input = Path('/kaggle/input')\n",
+    "\n",
+    "# Auto-detect dataset folder\n",
+    "dataset_folders = list(kaggle_input.glob('*'))\n",
+    "print(f\"Available datasets: {[f.name for f in dataset_folders]}\")\n",
+    "\n",
+    "# Find the correct folder\n",
+    "data_dir = None\n",
+    "for folder in dataset_folders:\n",
+    "    if (folder / 'elliptic_txs_features.csv').exists():\n",
+    "        data_dir = folder\n",
+    "        break\n",
+    "\n",
+    "if data_dir is None:\n",
+    "    raise FileNotFoundError(\n",
+    "        \"Dataset not found! Please add 'elliptic-fraud-detection' dataset in Kaggle.\\n\"\n",
+    "        \"Go to: Add Data → Search 'elliptic' → Add dataset\"\n",
+    "    )\n",
+    "\n",
+    "print(f\"Using dataset: {data_dir.name}\")\n",
+    "print(f\"Files: {[f.name for f in data_dir.glob('*.csv')]}\")\n",
+    "\n",
+    "# Load features and classes\n",
+    "print(\"\\nLoading Elliptic++ dataset...\")\n",
     "features_df = pd.read_csv(data_dir / 'elliptic_txs_features.csv')\n",
     "classes_df = pd.read_csv(data_dir / 'elliptic_txs_classes.csv')\n",
     "\n",
@@ -79,8 +106,8 @@
     "# Merge features and classes\n",
     "df = features_df.merge(classes_df, on='txId', how='left')\n",
     "print(f\"Merged shape: {df.shape}\")\n",
-    "print(f\"\\nColumns (first 30): {list(df.columns[:30])}\")\n",
-    "print(f\"\\nUnique class values: {sorted(df['class'].dropna().unique())}\")"
+    "print(f\"\\nSample columns: {list(df.columns[:10])}...\")\n",
+    "print(f\"Unique class values: {sorted(df['class'].dropna().unique())}\")"
    ]
   },
   {
